@@ -23,12 +23,17 @@ dependencies {
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 	implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2.1'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 	implementation(project(":common"))
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-contract-maven-plugin:3.1.5'
 	testImplementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
+	testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
+}
+
+tasks.withType(AbstractCompile) {
+	options.compilerArgs += ["--add-exports", "java.base/sun.security.util=ALL-UNNAMED"]
+	options.compilerArgs += ["--add-exports", "java.base/sun.security.pkcs=ALL-UNNAMED"]
 }
 
 test {
